# sagittarius_humble_ws

./: README.md  onekey.sh
src/: onekey.sh
src/Sag_Audio/audio_input/: README.md  package.xml  setup.py
src/Sag_Audio/audio_input/audio_input/: audio_input_local.py  funsar_rec.py  minicpm_res.py  sd_sample.py  vad.py  vad_record_pyaudio.py
src/Sag_Audio/audio_input/resource/: hotword.txt
src/Sag_Bringup/: ARCHITECTURE.md  INTEL.md
src/Sag_Bringup/sagittarius_descriptions/: CMakeLists.txt  README.md  package.xml
src/Sag_Bringup/sagittarius_descriptions/launch/: sagittarius_description.launch.py
src/Sag_Bringup/sagittarius_descriptions/rviz/: sagittarius_description.rviz
src/Sag_Bringup/sagittarius_descriptions/urdf/: control.urdf.xacro  sgr532.urdf.xacro
src/Sag_Bringup/sagittarius_toolbox/: TOOLBOX_ANALYSIS.md
src/Sag_Bringup/sagittarius_toolbox/sagittarius_common_msgs/: CMakeLists.txt  package.xml
src/Sag_Bringup/sagittarius_toolbox/sagittarius_common_msgs/srv/: ArmInfo.srv  RobotInfo.srv
src/Sag_Bringup/sagittarius_toolbox/sagittarius_modules/: README.md  package.xml  setup.cfg  setup.py
src/Sag_Bringup/sagittarius_toolbox/sgr_ros_control/: CMakeLists.txt  package.xml  sgr_ros_control.xml
src/Sag_Bringup/sdk_sagittarius_arm/: CMakeLists.txt  CODE_ANALYSIS.md  README.md  package.xml
src/Sag_Bringup/sdk_sagittarius_arm/cfg/: sgr532.yaml
src/Sag_Bringup/sdk_sagittarius_arm/include/sdk_sagittarius_arm/: sdk_sagittarius_arm_common.h  sdk_sagittarius_arm_common_serial.h  sdk_sagittarius_arm_real.h
src/Sag_Bringup/sdk_sagittarius_arm/launch/: sagittarius_arm_sdk.launch.py  sagittarius_description_true.launch.py  sagittarius_moveit.launch.py
src/Sag_Bringup/sdk_sagittarius_arm/rviz/: moveit.rviz
src/Sag_Bringup/sdk_sagittarius_arm/scripts/: sym_link_sag.py
src/Sag_Bringup/sdk_sagittarius_arm/src/: sdk_sagittarius_arm.cpp  sdk_sagittarius_arm_common.cpp  sdk_sagittarius_arm_common_serial.cpp  sdk_sagittarius_arm_real.cpp
src/Sag_Demo/: DEMO_ANALYSIS.md
src/Sag_Demo/cobot_draw/: CMakeLists.txt  README.md  package.xml
src/Sag_Demo/cobot_draw/config/: aubo_60pt.nc  config.yaml  five_pointed_star.nc  good.nc
src/Sag_Demo/cobot_draw/launch/: draw_circle_true.launch.py  draw_five_stars.launch.py  draw_five_stars_true.launch.py  draw_gcode.launch.py  draw_square_true.launch.py
src/Sag_Demo/cobot_draw/src/: draw_circle.cpp  draw_five_stars.cpp  draw_gcode.cpp  draw_square.cpp  get_current_pose.cpp
src/Sag_Demo/sagittarius_cam_calibration/: README.md  package.xml  setup.cfg  setup.py
src/Sag_Demo/sagittarius_cam_calibration/config/: usb_cam_calibration.yaml
src/Sag_Demo/sagittarius_cam_calibration/launch/: sag_apriltag_camera_calibration.launch.py  sag_aruco_detect.launch.py  sag_aruco_detect_tf.launch.py  sag_rs_camera_calibration.launch.py
src/Sag_Demo/sagittarius_cam_calibration/sagittarius_cam_calibration/: cam2apriltag.py  camera_calibration.py  charuco_detect.py  charuco_detect_tf.py
src/Sag_Demo/sagittarius_humble_demo/: README.md
src/Sag_Demo/sagittarius_humble_demo/sagittarius_puppet_control/: CMakeLists.txt  package.xml
src/Sag_Demo/sagittarius_humble_demo/sagittarius_puppet_control/launch/: puppet_control.launch.py  puppet_control_play.launch.py  puppet_control_record.launch.py  puppet_control_slaver_play.launch.py  rosbag_play_simple.launch.py  rosbag_record_simple.launch.py
src/Sag_Demo/sagittarius_humble_demo/sagittarius_puppet_control/rviz/: puppet_control.rviz
src/Sag_Demo/sagittarius_humble_demo/sagittarius_puppet_control/scripts/: puppet_control_play.py  puppet_slaver_play.py
src/Sag_Demo/sagittarius_humble_demo/sagittarius_puppet_control/src/: puppet_control_single_node.cpp  ros2bag_record_control.cpp
src/Sag_Demo/sagittarius_py_demo/: README.md  package.xml  setup.cfg  setup.py
src/Sag_Demo/sagittarius_py_demo/launch/: eye_out_hsv_catch.launch.py  hsv_catch.launch.py  hsv_roi.launch.py  motion_planning.launch.py  simple_fk_planning.launch.py  simple_ik_planning.launch.py  yolo_catch.launch.py  yolo_meal_catch.launch.py
src/Sag_Demo/sagittarius_py_demo/rviz/: meal_rviz.rviz  rviz.rviz
src/Sag_Demo/sagittarius_py_demo/sagittarius_py_demo/: eye_out_hsv_catch.py  eye_out_hsv_detect.py  hsv_catch.py  hsv_detect.py  meal_catch.py  motion_planning_api_demo.py  ros_roi_hsv.py  sag_detect.py  sag_eye_out_motion.py  simple_fk_planning.py  simple_ik_planning.py  yolo_catch.py
src/Sag_Gazebo/sagittarius_gazebo/: README.md
src/Sag_LLM/llm_config/: README.md
src/Sag_LLM/llm_interfaces/: README.md
src/Sag_LLM/llm_model/: README.md
src/Sag_Moveit/moveit2/: README.md
src/Sag_Moveit/sagittarius_humble_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/Sag_Moveit/sagittarius_humble_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  sgr532.ros2_control.xacro  sgr532.srdf  sgr532.urdf.xacro
src/Sag_Moveit/sagittarius_humble_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/Sag_Moveit/sagittarius_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/Sag_Moveit/sagittarius_moveit/config/: joint_limits.yaml  kinematics.yaml  kinematics_actual.yaml  modes.yaml  moveit_controllers.yaml  ompl_planning_true.yaml  sgr532.srdf
src/Sag_Robot_Control/: package.xml  setup.py
src/Sag_Robot_Control/config/: gestures.yaml
src/Sag_Robot_Control/launch/: gesture_control.launch.py
src/Sag_Robot_Control/sagittarius_robot_control/: __init__.py  gesture_player.py
src/Sag_Vision/: VISION_ANALYSIS.md
src/Sag_Vision/apriltag/: README.md
src/Sag_Vision/apriltag_ros/: README.md
src/Sag_Vision/realsense2_description/: README.md
src/Sag_Vision/ros2_yolov8/: README.md  package.xml  setup.cfg  setup.py
src/Sag_Vision/rs_camera_calibration/: CMakeLists.txt  README.md  package.xml
src/Sag_Vision/usb_cam/: README.md
src/sagittarius_gazebo/: README.md
(+54 files in other folders)
