<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sagittarius_common_msgs</name>
  <version>0.0.0</version>
  <description>
    sagittarius_common_msgs provides messages for the sagittarius arms.
  </description>
  <maintainer email="litian.zhuang@nxrobo.com">litian.zhuang</maintainer>
  <license>BSD</license>
  <author email="litian.zhuang@nxrobo.com">litian.zhuang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
